--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Yinan Yu, ÓàéóÄÏ, image classification, deep learning, image retrieval, object detection" />
+<meta name="keywords" content="Yinan Yu, ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½, image classification, deep learning, image retrieval, object detection" />
 <font size="2" face="Verdana">
 <title>Yinan Yu's Homepage</title>
 <style>
