--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Yinan Yu, ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½, image classification, deep learning, image retrieval, object detection" />
+<meta name="keywords" content="Yinan Yu, ÓàéóÄÏ, image classification, deep learning, image retrieval, object detection" />
 <font size="2" face="Verdana">
 <title>Yinan Yu's Homepage</title>
 <style>
@@ -13,20 +13,16 @@ list-style-type:decimal;
 }
 </style>
 </head>
-
 <body>
 <p><font size="+2">Welcome to <B>Yinan Yu</B>'s Home page</font></p>
 <table>
 <tr>
 <td>
-<p>Contact me: yuyinan[at]baidu[dot]com or ynyu[at]nlpr[dot]ia[dot]ac[dot]cn</p>
+<p>Contact me: yuyinan[at]baidu[dot]com or bebekifis[at]gmail[dot]com</p>
 <p><B>Institute of Deep Learning (IDL) @ Baidu, Inc.</B>, Beijing, China</p>
 <p>I finished my Ph.D. in Pattern Recognition at NLPR, CASIA, under the supervision of Prof. <a href="http://www.nlpr.ia.ac.cn/English/irds/People/tnt.html">Tieniu Tan</a> and Prof. <a href="http://www.cbsr.ia.ac.cn/users/kqhuang/">Kaiqi Huang</a> in June 2012. </p>
 <p>Now I'm a postdocoral fellow work with <a href="http://www.dbs.ifi.lmu.de/~yu_k/">Kai Yu</a> and Prof. <a href="http://www.csai.tsinghua.edu.cn/personal_homepage/zhangchangshui/Eindex.htm">Changshui Zhang</a> at the Institute of Deep Learning of Baidu, Inc. </p>
 <p>I still work in the area of computer vision and machine learning, especially on large scale visual recognition application and distributed machine learning algorithms. </p>
-<p><a href="http://pascallin.ecs.soton.ac.uk/challenges/VOC/voc2011/workshop/index.html">PASCAL VOC 2011 Detection Challenge</a> Winner, 1st, 40.9% mAP (We got 36.8% last year, 4.1% improvement)<br>
-<a href="http://pascallin.ecs.soton.ac.uk/challenges/VOC/voc2011/workshop/index.html">PASCAL VOC 2011 Classification Challenge</a> Honourable Mention, 2nd, 78.2% mAP (We got 71.2% last year, 7% improvement)<br>
-<a href="http://pascallin.ecs.soton.ac.uk/challenges/VOC/voc2010/workshop/index.html">PASCAL VOC 2010 Detection Challenge</a> Winner, 1st, 36.8% mAP</p>
 </td>
 <td>
 <img src="images/Yinan_Yu.jpg" height=200/>
@@ -35,31 +31,36 @@ list-style-type:decimal;
 </table>
 <HR>
 <div>
+<h2>Award</h2>
+<p><a href="http://pascallin.ecs.soton.ac.uk/challenges/VOC/voc2011/workshop/index.html">PASCAL VOC 2011 Detection Challenge</a> Winner, 1st, 40.9% mAP (We got 36.8% last year, 4.1% improvement)</p>
+<p><a href="http://pascallin.ecs.soton.ac.uk/challenges/VOC/voc2011/workshop/index.html">PASCAL VOC 2011 Classification Challenge</a> Honourable Mention, 2nd, 78.2% mAP (We got 71.2% last year, 7% improvement)</p>
+<p><a href="http://pascallin.ecs.soton.ac.uk/challenges/VOC/voc2010/workshop/index.html">PASCAL VOC 2010 Detection Challenge</a> Winner, 1st, 36.8% mAP</p>
 <h2>Education</h2>
-<li>2007~2012(expected): NLPR, CASIA, Beijing, China, PhD, Pattern Recognition
-<li>2003~2007: Beijing University of Posts and Telecommunications (BUPT), Beijing, China, BS, Telecommunication Engineering
-</div>
-<div>
+<ul style="margin:14px; padding:10px;">
+<li style= "padding:5px 0px 0px 1px;">2007~2012: NLPR, CASIA, Beijing, China, PhD, Pattern Recognition
+<li style= "padding:5px 0px 0px 1px;">2003~2007: Beijing University of Posts and Telecommunications (BUPT), Beijing, China, BS, Telecommunication Engineering
+</ul>
 <h2>Application & Product</h2>
-<ol>
-<li><a href="dnn.html">Deep Neural Network (DNN) for Content Based Image Retrieval (CBIR)<img src="./images/new.gif" alt="cbir"/></a>
-<li><a href="detection.html">Object Detection via Deformabel Part Based Model (A C/C++ version)<img src=./images/new.gif" alt="cdpm"/></a>
-<li><a href="facial.html">Facial Landmark Localization<img src="./images/new.gif" alt="fl"/></a>
-<li><a href="dlpm.html">Parallelized Distributed Large Scale Classification<img src="./images/new.gif" alt="plsc"/></a>
+<ol style= "margin:14px; padding:10px;">
+<li style= "padding:5px 0px 0px 1px;"><a href="dnn.html">Deep Neural Network (DNN) for Content Based Image Retrieval (CBIR)<img src="./images/new.gif" alt="cbir"/></a>
+<li style= "padding:5px 0px 0px 1px;"><a href="detection.html">Object Detection via Deformabel Part Based Model (A C/C++ code will be released)<img src="./images/new.gif" alt="cdpm"/></a>
+<li style= "padding:5px 0px 0px 1px;"><a href="facial.html">Facial Landmark Localization (coming soon)</a>
+<li style= "padding:5px 0px 0px 1px;"><a href="dlpm.html">Parallelized Distributed Large Scale Classification (coming soon)</a>
 </ol>
 <h2>Research interests</h2>
-<ol>
-<li><a href="dnn.html">Deep Neural Network (DNN) for CBIR<img src="./images/new.gif" alt="new"/></a>
-<li><a href="CLUSAC.html">Multiple Transform Estimation</a>
-<li><a href="MDC.html">Object Detection</a>
-<li><a href="IIM.html">Image Matching</a>
-<li><a href="HLSIFD.html">Interest point detection</a>
-<li><a href="image_classification.html">Image Classification and Object Recognition</a> A software is released for test <img src="./images/new.gif" alt="new"/>
+<ol style= "margin:14px; padding:10px;">
+<li style= "padding:5px 0px 0px 1px;"><a href="CLUSAC.html">Multiple Transform Estimation</a>
+<li style= "padding:5px 0px 0px 1px;"><a href="MDC.html">Object Detection</a>
+<li style= "padding:5px 0px 0px 1px;"><a href="IIM.html">Image Matching</a>
+<li style= "padding:5px 0px 0px 1px;"><a href="HLSIFD.html">Interest point detection</a>
+<li style= "padding:5px 0px 0px 1px;"><a href="image_classification.html">Image Classification and Object Recognition</a> A software is released for test
+</ol>
 </div>
 <div>
 <h2>Publication</h2>
 <ul style= "margin:14px; padding:10px;">
-<li stype= "padding:5px 0px 0px 1px;"><em>Xin Zhao, <U><b>Yinan Yu</b></U>, Yongzhen Huang, Kaiqi Huang, Tieniu Tan</em>, <br><strong>"Feature coding via vector difference for image classification"</strong>, <br>19th IEEE International Conference on Image Processing (<b>ICIP</b>), 2012 <a href="06467561.pdf">pdf</a>
+	<li style= "padding:5px 0px 0px 1px;"><em>Weiqiang Ren, <U><b>Yinan Yu</b></U>, Junge Zhang, Kaiqi Huang</em>. <br><strong>Exploring the Power of Kernel in Feature Representation for Object Categorization</strong>. <br>The 20th International Conference on Neural Information Processing (<b>ICONIP</b>), 2013.
+<li style= "padding:5px 0px 0px 1px;"><em>Xin Zhao, <U><b>Yinan Yu</b></U>, Yongzhen Huang, Kaiqi Huang, Tieniu Tan</em>, <br><strong>"Feature coding via vector difference for image classification"</strong>, <br>19th IEEE International Conference on Image Processing (<b>ICIP</b>), 2012 <a href="06467561.pdf">pdf</a>
 <li style= "padding:5px 0px 0px 1px;"><em><U><b>Yinan Yu</b></U>, Kaiqi Huang, Wei Chen, Tieniu Tan</em>, <br><strong>"A Novel Algorithm for View and Illumination Invariant Image Matching"</strong>, <br>IEEE Trans. on Image Processing (<b>TIP</b>), 2011 <a href="./05930364.pdf">pdf</a>
 <li style= "padding:5px 0px 0px 1px;"><em>Junge Zhang, <U><b>Yinan Yu</b></U>, Yongzhen Huang, Chong Wang, Weiqiang Ren, Jinchen Wu, Kaiqi Huang, Tieniu Tan</em>, <br><strong>"Object Detection based on Data Decomposition, Spatial Mixture Modeling and Context"</strong>, <br><b>ICCV workshop on PASCAL VOC</b>, 2011 <a href="http://pascallin.ecs.soton.ac.uk/challenges/VOC/voc2011/workshop/nlpr.pdf">pdf</a>
 <li style= "padding:5px 0px 0px 1px;"><em>Yongzhen Huang, Kaiqi Huang, <U><b>Yinan Yu</b></U>, Tieniu Tan</em>,  <br><strong>"Salient Coding for Image Classification"</strong>, <br>Computer Vision and Pattern Recognition (<b>CVPR</b>), 2011 <a href="1691.pdf">pdf</a>
