--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ list-style-type:decimal;
 <p>I still work in the area of computer vision and machine learning, especially on large scale visual recognition application and distributed machine learning algorithms. </p>
 </td>
 <td>
-<img src="images/Yinan_Yu.jpg" height=200/>
+<img src="images/Yinan_Yu.JPG" height=200/>
 </td>
 </tr>
 </table>
