--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ list-style-type:decimal;
 </style>
 </head>
 <body>
-<p><font size="+2">Welcome to <B>Yinan Yu</B>'s Home page</font></p>
+<p><font size="+2">Welcome to <B>Yinan Yu</B>'s Home page (backup)</font></p>
+Please visit http://cbsr.ia.ac.cn/users/ynyu/
 <table>
 <tr>
 <td>
